Fix CI dependencies: All 10 MemoryCache groups run in parallel before other UTs
CORRECTION: Fixed job dependencies to maximize parallelization

✅ BEFORE (incorrect):
- Groups 1-6 → fast-feedback-complete → Other UTs
- Groups 7-10 running separately

✅ AFTER (correct):
- ALL 10 groups (1-10) + remaining run in PARALLEL
- fast-feedback-complete waits for ALL 11 MemoryCache jobs
- Other UTs start only after ALL MemoryCache tests complete

🚀 BENEFITS:
- Maximum parallelization: All 10 groups start simultaneously
- No partial feedback: Other UTs wait for complete MemoryCache validation
- Cleaner architecture: One checkpoint for all MemoryCache tests
- Better failure isolation: All MemoryCache issues identified in parallel

⏰ EXPECTED FLOW:
1. ALL 10 MemoryCache groups start simultaneously
2. Groups 1-2 finish in ~10 min (basic operations)
3. Groups 3-6 finish in ~12-15 min (data structures)
4. Groups 7-10 finish in ~15-25 min (performance/stress)
5. fast-feedback-complete triggers after ALL groups done
6. Other unit tests (MonoTask, MonstraBase, etc.) begin

This provides true parallel execution while maintaining clear checkpoint.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -608,10 +608,10 @@ jobs:
         swift test --filter "(PriorityLRUQueuePerformanceTests|TTLPriorityLRUQueuePerformanceTests).(testRemoveAtRandomKey|testRemoveElement|testMixedWorkload|testExpiredEntries)" --verbose
 
   # ==============================================
-  # 🚀 FAST FEEDBACK JOBS (Groups 1-6: Safe & Medium Risk)
+  # 🚀 FAST FEEDBACK JOBS (ALL 10 Groups + Cache Statistics)
   # ==============================================
-  # These jobs must complete before starting other unit tests
-  # Provides fast feedback in 2-8 minutes instead of waiting for risky tests
+  # All 10 MemoryCache groups must complete before starting other unit tests
+  # Provides fast parallel feedback instead of 60+ minute sequential runs
   
   fast-feedback-complete:
     name: "✅ Fast Feedback Complete"
@@ -625,16 +625,25 @@ jobs:
       test-memorycache-group3-priority-lru,
       test-memorycache-group4-ttl-priority-lru,
       test-memorycache-group5-management,
-      test-memorycache-group6-concurrency
+      test-memorycache-group6-concurrency,
+      test-memorycache-group7-basic-performance,
+      test-memorycache-group8-small-capacity,
+      test-memorycache-group9-integration,
+      test-memorycache-group10-stress,
+      test-memorycache-remaining
     ]
     
     steps:
     - name: "🚀 Fast Feedback Summary"
       run: |
-        echo "✅ FAST FEEDBACK COMPLETE! Groups 1-6 passed in parallel"
+        echo "✅ FAST FEEDBACK COMPLETE! All 10 MemoryCache groups completed in parallel"
         echo "🟢 Groups 1-2: Basic operations (LOW RISK) - ✅ Completed"
-        echo "🟡 Groups 3-6: Data structures & concurrency (MEDIUM RISK) - ✅ Completed"
-        echo "🚀 Other unit tests can now proceed in parallel with remaining high-risk groups"
+        echo "🟡 Groups 3-6: Data structures & concurrency (MEDIUM RISK) - ✅ Completed" 
+        echo "🟠 Group 7: Basic performance tests (MEDIUM-HIGH RISK) - ✅ Completed"
+        echo "🔴 Groups 8-9: High-risk performance & integration (HIGH RISK) - ✅ Completed"
+        echo "💀 Group 10: Stress tests with dead loop protection (CRITICAL RISK) - ✅ Completed"
+        echo "🧪 Group 11: Statistics and remaining tests - ✅ Completed"
+        echo "🚀 All MemoryCache tests passed! Other unit tests can now proceed"
 
   # ==============================================
   # 🎯 ALL TESTS SUMMARY (Including High-Risk Groups)  
