Fix circular dependency in CI workflow
CRITICAL FIX: Resolved circular dependency causing workflow validation failure

❌ PROBLEM:
- fast-feedback-complete depended on all MemoryCache groups
- Other unit tests depended on fast-feedback-complete
- This created a circular dependency graph

✅ SOLUTION:
- MemoryCache groups (1-10) run in parallel independently
- Other unit tests run in parallel with MemoryCache groups
- fast-feedback-complete is now a summary/checkpoint job only
- No blocking dependencies - maximum parallelization achieved

🚀 CORRECTED FLOW:
START → ALL tests run in parallel:
├── MemoryCache Groups 1-10 (parallel)
├── Other Unit Tests (MonoTask, etc.)
└── fast-feedback-complete (summary when MemoryCache done)

🎯 BENEFITS:
- Maximum parallelization: No artificial blocking
- Faster CI: All tests start immediately after validation
- Clear checkpoint: MemoryCache completion tracked separately
- No circular dependencies: Clean workflow graph

The workflow now validates successfully and provides optimal parallel execution.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,17 +217,17 @@ jobs:
         fi
 
   # ==============================================
-  # 🔄 OTHER UNIT TESTS (Start after fast feedback)
+  # 🔄 OTHER UNIT TESTS (Run in parallel with MemoryCache groups)
   # ==============================================
-  # These tests can start as soon as Groups 1-6 complete
-  # No need to wait for high-risk Groups 7-10
+  # These tests run in parallel with MemoryCache groups
+  # No dependency on fast-feedback-complete to avoid circular dependency
   
   # Monstask Tests
   test-monotask:
     name: MonoTask Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -240,7 +240,7 @@ jobs:
     name: MonoTask Cross-Scenario Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -253,7 +253,7 @@ jobs:
     name: MonoTask Clear Result Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -266,7 +266,7 @@ jobs:
     name: KV Heavy Tasks Manager Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -279,7 +279,7 @@ jobs:
     name: KV Light Tasks Manager Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -293,7 +293,7 @@ jobs:
     name: RetryCount Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -306,7 +306,7 @@ jobs:
     name: HashQueue Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -319,7 +319,7 @@ jobs:
     name: CPUTimeStamp Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -332,7 +332,7 @@ jobs:
     name: Heap Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -345,7 +345,7 @@ jobs:
     name: DoublyLink Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -358,7 +358,7 @@ jobs:
     name: TracingIDFactory Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -372,7 +372,7 @@ jobs:
     name: Heap Performance Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -385,7 +385,7 @@ jobs:
     name: CPUTimeStamp Performance Tests
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -524,7 +524,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 15
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -541,7 +541,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 20
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -558,7 +558,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 20
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -575,7 +575,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 25
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -594,7 +594,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 15
     if: needs.check-schedule.outputs.should-run == 'true'
-    needs: [check-schedule, validate-test-coverage, fast-feedback-complete]
+    needs: [check-schedule, validate-test-coverage]
     
     steps:
     - uses: actions/checkout@v4
@@ -608,13 +608,13 @@ jobs:
         swift test --filter "(PriorityLRUQueuePerformanceTests|TTLPriorityLRUQueuePerformanceTests).(testRemoveAtRandomKey|testRemoveElement|testMixedWorkload|testExpiredEntries)" --verbose
 
   # ==============================================
-  # 🚀 FAST FEEDBACK JOBS (ALL 10 Groups + Cache Statistics)
+  # 🚀 MEMORYCACHE COMPLETION CHECKPOINT
   # ==============================================
-  # All 10 MemoryCache groups must complete before starting other unit tests
-  # Provides fast parallel feedback instead of 60+ minute sequential runs
+  # Summary job that completes when ALL 10 MemoryCache groups finish
+  # Runs in parallel with other unit tests (no blocking dependencies)
   
   fast-feedback-complete:
-    name: "✅ Fast Feedback Complete"
+    name: "✅ MemoryCache Tests Complete"
     runs-on: macos-latest
     if: needs.check-schedule.outputs.should-run == 'true'
     needs: [
@@ -634,16 +634,16 @@ jobs:
     ]
     
     steps:
-    - name: "🚀 Fast Feedback Summary"
+    - name: "🚀 MemoryCache Completion Summary"
       run: |
-        echo "✅ FAST FEEDBACK COMPLETE! All 10 MemoryCache groups completed in parallel"
+        echo "✅ ALL MEMORYCACHE TESTS COMPLETE! All 10 groups completed in parallel"
         echo "🟢 Groups 1-2: Basic operations (LOW RISK) - ✅ Completed"
         echo "🟡 Groups 3-6: Data structures & concurrency (MEDIUM RISK) - ✅ Completed" 
         echo "🟠 Group 7: Basic performance tests (MEDIUM-HIGH RISK) - ✅ Completed"
         echo "🔴 Groups 8-9: High-risk performance & integration (HIGH RISK) - ✅ Completed"
         echo "💀 Group 10: Stress tests with dead loop protection (CRITICAL RISK) - ✅ Completed"
         echo "🧪 Group 11: Statistics and remaining tests - ✅ Completed"
-        echo "🚀 All MemoryCache tests passed! Other unit tests can now proceed"
+        echo "🎉 MemoryCache validation successful! (Other unit tests ran in parallel)"
 
   # ==============================================
   # 🎯 ALL TESTS SUMMARY (Including High-Risk Groups)  
