--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   release:
     name: Create Release
@@ -19,30 +23,31 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
       
     - name: Create Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: actions/github-script@v7
       with:
-        tag_name: ${{ steps.get_version.outputs.VERSION }}
-        release_name: Release ${{ steps.get_version.outputs.VERSION }}
-        body: |
-          ## What's Changed
+        script: |
+          const { data: release } = await github.rest.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: '${{ steps.get_version.outputs.VERSION }}',
+            name: 'Release ${{ steps.get_version.outputs.VERSION }}',
+            body: `## What's Changed
           
           See [CHANGELOG.md](CHANGELOG.md) for detailed information about this release.
           
           ## Installation
           
           ### Swift Package Manager
-          ```swift
+          \`\`\`swift
           dependencies: [
               .package(url: "https://github.com/yangchenlarkin/Monstra.git", from: "${{ steps.get_version.outputs.VERSION }}")
           ]
-          ```
+          \`\`\`
           
           ### CocoaPods
-          ```ruby
+          \`\`\`ruby
           pod 'Monstra', '~> ${{ steps.get_version.outputs.VERSION }}'
-          ```
+          \`\`\`
           
           ## Breaking Changes
           
@@ -54,9 +59,11 @@ jobs:
           
           ## Bug Fixes
           
-          See [CHANGELOG.md](CHANGELOG.md) for complete bug fix list.
-        draft: false
-        prerelease: false
+          See [CHANGELOG.md](CHANGELOG.md) for complete bug fix list.`,
+            draft: false,
+            prerelease: false
+          });
+          console.log(`Release created: ${release.html_url}`);
         
     - name: Update CocoaPods
       run: |
