--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,8 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const { data: release } = await github.rest.repos.createRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag_name: '${{ steps.get_version.outputs.VERSION }}',
-            name: 'Release ${{ steps.get_version.outputs.VERSION }}',
-            body: `## What's Changed
+          const version = '${{ steps.get_version.outputs.VERSION }}';
+          const body = `## What's Changed
           
           See [CHANGELOG.md](CHANGELOG.md) for detailed information about this release.
           
@@ -40,13 +36,13 @@ jobs:
           ### Swift Package Manager
           \`\`\`swift
           dependencies: [
-              .package(url: "https://github.com/yangchenlarkin/Monstra.git", from: "${{ steps.get_version.outputs.VERSION }}")
+              .package(url: "https://github.com/yangchenlarkin/Monstra.git", from: "${version}")
           ]
           \`\`\`
           
           ### CocoaPods
           \`\`\`ruby
-          pod 'Monstra', '~> ${{ steps.get_version.outputs.VERSION }}'
+          pod 'Monstra', '~> ${version}'
           \`\`\`
           
           ## Breaking Changes
@@ -59,11 +55,19 @@ jobs:
           
           ## Bug Fixes
           
-          See [CHANGELOG.md](CHANGELOG.md) for complete bug fix list.`,
+          See [CHANGELOG.md](CHANGELOG.md) for complete bug fix list.`;
+          
+          const { data: release } = await github.rest.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: version,
+            name: 'Release ' + version,
+            body: body,
             draft: false,
             prerelease: false
           });
-          console.log(\`Release created: \${release.html_url}\`);
+          
+          console.log('Release created: ' + release.html_url);
         
     - name: Update CocoaPods
       run: |
