ci: add CocoaPods installation step to release workflow - Install CocoaPods gem before attempting pod trunk push - Ensure pod command is available in GitHub Actions runner

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,11 @@ jobs:
           
           console.log('Release created: ' + release.html_url);
         
+    - name: Install CocoaPods
+      run: |
+        sudo gem install cocoapods
+        pod --version
+        
     - name: Update CocoaPods
       run: |
         # Update CocoaPods trunk
