--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,19 +77,39 @@ jobs:
     - name: Validate Podspec
       run: |
         # Validate the podspec locally first
+        echo "🔍 Validating Monstra.podspec..."
         pod lib lint Monstra.podspec --allow-warnings
         echo "✅ Podspec validation passed"
         
+    - name: Check CocoaPods Status
+      run: |
+        echo "📊 Checking CocoaPods trunk status..."
+        if pod trunk me 2>/dev/null; then
+          echo "✅ Already registered with CocoaPods trunk"
+        else
+          echo "⚠️  Not registered with CocoaPods trunk"
+          echo "📧 Registration required: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
+        fi
+        
     - name: Update CocoaPods
       run: |
-        # Try to push to CocoaPods trunk
-        # Note: First time requires manual registration with: pod trunk register your-email@example.com "Your Name"
-        if pod trunk push Monstra.podspec --allow-warnings; then
+        echo "🚀 Attempting to push to CocoaPods trunk..."
+        echo "📧 Note: First time requires registration: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
+        
+        # Try to push to CocoaPods trunk with better error handling
+        if pod trunk push Monstra.podspec --allow-warnings --verbose; then
           echo "✅ Successfully pushed to CocoaPods trunk"
+          echo "🎉 Monstra is now available via: pod 'Monstra'"
         else
           echo "⚠️  CocoaPods push failed - this is normal for first-time releases"
-          echo "📧 You need to register first: pod trunk register your-email@example.com 'Your Name'"
-          echo "🔗 Then verify your email and try again"
+          echo ""
+          echo "📋 To complete CocoaPods integration:"
+          echo "1. Run: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
+          echo "2. Check your email and click verification link"
+          echo "3. Wait for verification to complete"
+          echo "4. Run: pod trunk push Monstra.podspec --allow-warnings"
+          echo ""
+          echo "🔗 CocoaPods registration: https://guides.cocoapods.org/making/getting-setup-with-trunk.html"
         fi
         
     - name: Notify Release
@@ -98,3 +118,26 @@ jobs:
         echo "📦 Available on Swift Package Manager and CocoaPods"
         echo "📚 Documentation updated"
         echo "🧪 All tests passing"
+        echo ""
+        echo "🔗 GitHub Release: https://github.com/yangchenlarkin/Monstra/releases/tag/${{ steps.get_version.outputs.VERSION }}"
+        echo "📦 Swift Package: https://github.com/yangchenlarkin/Monstra.git"
+        echo "🍫 CocoaPods: pod 'Monstra'"
+        
+    - name: Release Summary
+      run: |
+        echo "## 🚀 Release ${{ steps.get_version.outputs.VERSION }} Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### ✅ Completed Tasks:" >> $GITHUB_STEP_SUMMARY
+        echo "- GitHub Release created" >> $GITHUB_STEP_SUMMARY
+        echo "- Podspec validated" >> $GITHUB_STEP_SUMMARY
+        echo "- CocoaPods integration attempted" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 📋 Next Steps:" >> $GITHUB_STEP_SUMMARY
+        echo "- Verify release on GitHub" >> $GITHUB_STEP_SUMMARY
+        echo "- Test Swift Package Manager integration" >> $GITHUB_STEP_SUMMARY
+        echo "- Complete CocoaPods trunk registration if needed" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 🔗 Quick Links:" >> $GITHUB_STEP_SUMMARY
+        echo "- [GitHub Release](https://github.com/yangchenlarkin/Monstra/releases/tag/${{ steps.get_version.outputs.VERSION }})" >> $GITHUB_STEP_SUMMARY
+        echo "- [Swift Package](https://github.com/yangchenlarkin/Monstra.git)" >> $GITHUB_STEP_SUMMARY
+        echo "- [CocoaPods Guide](https://guides.cocoapods.org/making/getting-setup-with-trunk.html)" >> $GITHUB_STEP_SUMMARY
