--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,25 +91,59 @@ jobs:
           echo "📧 Registration required: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
         fi
         
+    - name: Register with CocoaPods Trunk
+      run: |
+        echo "📝 Attempting to register with CocoaPods trunk..."
+        echo "📧 Email: yangchenlarkin@gmail.com"
+        echo "👤 Name: Larkin"
+        
+        # Check if already registered
+        if pod trunk me 2>/dev/null; then
+          echo "✅ Already registered with CocoaPods trunk"
+        else
+          echo "🔄 Registering new session..."
+          if pod trunk register yangchenlarkin@gmail.com "Larkin" --description="GitHub Actions automated registration"; then
+            echo "✅ Registration request sent successfully!"
+            echo "📧 Check your email (yangchenlarkin@gmail.com) for verification link"
+            echo "⚠️  Note: You must click the verification link before pushing to trunk"
+            echo "⏳ Wait 5-10 minutes after verification before attempting to push"
+          else
+            echo "⚠️  Registration failed - this may be normal if already registered"
+            echo "📋 Manual registration may be required:"
+            echo "   pod trunk register yangchenlarkin@gmail.com 'Larkin'"
+          fi
+        fi
+        
     - name: Update CocoaPods
       run: |
         echo "🚀 Attempting to push to CocoaPods trunk..."
-        echo "📧 Note: First time requires registration: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
         
-        # Try to push to CocoaPods trunk with better error handling
-        if pod trunk push Monstra.podspec --allow-warnings --verbose; then
-          echo "✅ Successfully pushed to CocoaPods trunk"
-          echo "🎉 Monstra is now available via: pod 'Monstra'"
+        # Check registration status first
+        if pod trunk me 2>/dev/null; then
+          echo "✅ Verified registration with CocoaPods trunk"
+          echo "🔄 Attempting to push podspec..."
+          
+          if pod trunk push Monstra.podspec --allow-warnings --verbose; then
+            echo "✅ Successfully pushed to CocoaPods trunk"
+            echo "🎉 Monstra is now available via: pod 'Monstra'"
+            echo "⏳ Pod will be searchable in 5-15 minutes"
+          else
+            echo "❌ Push failed - check error details above"
+            echo "📋 Troubleshooting steps:"
+            echo "1. Verify email verification is complete"
+            echo "2. Wait 5-10 minutes after verification"
+            echo "3. Try manual push: pod trunk push Monstra.podspec --allow-warnings"
+          fi
         else
-          echo "⚠️  CocoaPods push failed - this is normal for first-time releases"
-          echo ""
-          echo "📋 To complete CocoaPods integration:"
+          echo "⚠️  Not registered with CocoaPods trunk"
+          echo "📋 Manual registration required:"
           echo "1. Run: pod trunk register yangchenlarkin@gmail.com 'Larkin'"
-          echo "2. Check your email and click verification link"
-          echo "3. Wait for verification to complete"
-          echo "4. Run: pod trunk push Monstra.podspec --allow-warnings"
+          echo "2. Check yangchenlarkin@gmail.com for verification link"
+          echo "3. Click verification link and wait 5-10 minutes"
+          echo "4. Re-run this workflow or manually push:"
+          echo "   pod trunk push Monstra.podspec --allow-warnings"
           echo ""
-          echo "🔗 CocoaPods registration: https://guides.cocoapods.org/making/getting-setup-with-trunk.html"
+          echo "🔗 CocoaPods registration guide: https://guides.cocoapods.org/making/getting-setup-with-trunk.html"
         fi
         
     - name: Notify Release
@@ -130,6 +164,7 @@ jobs:
         echo "### ✅ Completed Tasks:" >> $GITHUB_STEP_SUMMARY
         echo "- GitHub Release created" >> $GITHUB_STEP_SUMMARY
         echo "- Podspec validated" >> $GITHUB_STEP_SUMMARY
+        echo "- CocoaPods trunk registration attempted" >> $GITHUB_STEP_SUMMARY
         echo "- CocoaPods integration attempted" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 📋 Next Steps:" >> $GITHUB_STEP_SUMMARY
