--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        xcode: ['15.0', '15.1', '15.2']
+        xcode: ['15.3', '15.4']
     
     steps:
     - name: Checkout
