fix: resolve 404 documentation links by using relative paths
- Fix README documentation links to use relative paths instead of GitHub Pages URLs
- Create DOCS_SETUP.md with comprehensive instructions for enabling GitHub Pages
- Fix documentation workflow by removing duplicate setup and improving debugging
- Provide clear API reference documentation directly in README
- Add troubleshooting guide for documentation setup issues

The links now work immediately and provide instructions for setting up live docs.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,11 +40,12 @@ jobs:
           --target Monstra \
           --disable-indexing \
           --transform-for-static-hosting \
-          --hosting-base-path Monstra \
+          --hosting-base-path /Monstra \
           --output-path ./docs
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
+        # List generated files for debugging
+        echo "Generated documentation files:"
+        find ./docs -type f -name "*.html" | head -10
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
