--- a/.github/workflows/scheduled-tests.yml
+++ b/.github/workflows/scheduled-tests.yml
@@ -2,8 +2,8 @@ name: Scheduled Tests
 
 on:
   schedule:
-    # Run every 5 minutes
-    - cron: '*/5 * * * *'
+    # Run every hour at minute 0
+    - cron: '0 * * * *'
   workflow_dispatch: # Allow manual triggering
 
 jobs:
