--- a/.github/workflows/scheduled-tests-dev.yml
+++ b/.github/workflows/scheduled-tests-dev.yml
@@ -9,6 +9,7 @@ jobs:
   scheduled-test:
     name: Scheduled Test Run
     runs-on: macos-latest
+    if: github.ref == 'refs/heads/develop'
     
     steps:
     - name: Checkout
