--- a/.github/workflows/scheduled-tests.yml
+++ b/.github/workflows/scheduled-tests.yml
@@ -2,13 +2,14 @@ name: Scheduled Tests
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 */4 * * *'  # Every 4 hours
   workflow_dispatch: # Allow manual triggering
 
 jobs:
   scheduled-test:
     name: Scheduled Test Run
     runs-on: macos-latest
+    timeout-minutes: 20
     
     steps:
     - name: Checkout
@@ -18,6 +19,7 @@ jobs:
       run: |
         echo "Scheduled test run at: $(date)"
         echo "Runner OS: ${{ runner.os }}"
+        echo "Branch: ${{ github.ref }}"
         xcodebuild -version
         swift --version
       
@@ -32,20 +34,19 @@ jobs:
     - name: Build
       run: swift build
       
-    - name: Run All Tests
+    - name: Run All Tests (Fast)
       run: swift test --parallel
       
-    - name: Run Force Update Tests (Critical)
-      run: swift test --filter MonoTaskForceUpdateTests
-      
-    - name: Generate Test Coverage
-      run: swift test --enable-code-coverage
+    - name: Run Critical Tests (Extra Check)
+      run: |
+        swift test --filter MonoTaskForceUpdateTests
+        swift test --filter MemoryCacheTests.testNegativeCapacity
       
     - name: Upload Test Results on Failure
       if: failure()
       uses: actions/upload-artifact@v4
       with:
-        name: test-failure-logs-${{ github.run_number }}
+        name: scheduled-test-failure-${{ github.run_number }}
         path: |
           .build/debug/
           *.log
